--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,96 @@ body {
     color: #444;
     
 }
+
+.questionBox {
+    background-color: #6273d4;
+    color: #fff;
+    border-radius: 9px;
+    padding: 10px 15px;
+}
+
+.optionBox {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 30px 0;
+    grid-gap: 15px;
+}
+.optionBox  span{
+    background-color: #ccc;
+    border-radius: 9px;
+    color: #444;
+    border: 1px solid #444;
+    padding: 10px 15px;
+
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer  button{
+    background-color: #1da3dd;
+    border-radius: 5px;
+    padding: 7px 15px;
+    color: #fff;
+    border: 0;
+    outline: none;
+    font-size: 20px;
+}
+
+.resultBox {
+    margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 15px;
+    font-size: 20px;
+}
+
+.resultBox *:nth-child(odd) {
+    text-align: right;
+}
+
+.resultBox span {
+    font-weight: 600;
+}
+.buttonBox {
+    border-top: 1px solid #444;
+    padding-top: 15px;
+    text-align: center;
+
+}
+
+.buttonBox  a{
+    background-color: #1da3dd;
+    border-radius: 50px;
+    border: 0;
+    text-decoration: none;
+    color: #fff;
+    outline: none;
+    padding: 7px 15px;
+    margin-top: 30px;
+    display: inline-block;
+
+}
 /* Question css style end  */
+
+/* media query style*/
+
+@media screen and (max-width: 768px) {
+    .leftSide {
+        display: none;
+    }
+     .container,
+     .box {
+         width: 425px;
+     }
+     .rightSide {
+         width: 100%;
+     }
+     .optionBox {
+         grid-template-columns: 1fr;
+     }
+}
 
 
